--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html> 
 <html>
 <head>
- function onBodyLoad()
+ <script type="text/javascript">
+
+        function onBodyLoad()
         {       
             document.addEventListener("deviceready", onDeviceReady, false);
         }
@@ -9,6 +11,8 @@
         function onDeviceReady()
         {
         }
+
+        </script>
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes;" />
 <meta charset="utf-8">
 <title>jQuery Mobile Web App</title>
