--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 </head> 
-<body> 
+<body onload="onBodyLoad()">
 
 <div id="page" data-role="page" data-theme="d">
 	<div data-role="header" data-theme="a">
