--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         </script>
- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes;" />
+ <meta name="viewport" content="width=device-width" />
 <meta charset="utf-8">
 <title>jQuery Mobile Web App</title>
 <link href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
