--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-<!DOCTYPE html> 
-<html> 
-
+	<!DOCTYPE html> 
+<html>
 <head>
+ <script type="text/javascript">
+
+        function onBodyLoad()
+        {       
+            document.addEventListener("deviceready", onDeviceReady, false);
+        }
+
+        function onDeviceReady()
+        {
+        }
+
+        </script>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="apple-mobile-web-app-capable" content="yes" /> 
-<script src="_/js/jquery.js"></script>
-<script src="_/js/custom-scripting.js"></script>
-<script src="_/js/jquery.mobile.js"></script>
 <title>jQuery Mobile Web App</title>
 <link href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
+<script src="http://code.jquery.com/jquery-1.6.4.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
 </head>
 
