--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	</div>
 	<div  style="background-color:#333; height:410px" data-role="content" data-theme="a">
     <p style="color: white">Equation for Investment and Earning:</p>
-    <img src="Grade 9=1-1.png" />            	
+    <img src='Grade 9=1-1.png' />            	
 	</div>
 </div>
 
@@ -565,7 +565,7 @@
  <p style="color: white">Simple interest:</p>
     <img src="Grade11=8-1.png" /> 
  <p style="color: white">Total amount of an investment earning simple interest:</p>
-    <img src="Grade11=8-2[1].png" /> 
+    <img src="Grade11=8-2.png" /> 
 </div>
 </div>
 
@@ -631,7 +631,7 @@
             <li><a href="#page47">Chapter 6-Trig Functions</a></li>
            
            <li><a href="#page48">Chapter 7-Trig Identities/Equations</a></li>
-            <li><a href="#page49">Chapter 8-Exponentail & Logarithmic Functions</a></li>	
+            <li><a href="#page49">Chapter 8-Exponential & Logarithmic Functions</a></li>	
             <li><a href="#page50">Chapter 9-Combination of Functions</a></li>	
             
  	 
@@ -749,11 +749,11 @@
     <img src='Advan= 7-8.png' />  
     <p style="color: white">Double Angle identites-Tangent:</p>
     <img src='Advan= 7-9.png' />  
-    <p style="color: white">Seconday Trigonometric Ratios-Cosecant:</p> <img src='Advan=7-10.png' />  
-    <p style="color: white">Seconday Trigonometric Ratios-secant:</p> <img src='Advan=7-11.png' />  
- <p style="color: white">Seconday Trigonometric Ratios-Cotangent:(1)</p> <img src='Advan=7-12.png' />  
+    <p style="color: white">Secondary Trigonometric Ratios-Cosecant:</p> <img src='Advan=7-10.png' />  
+    <p style="color: white">Secondary Trigonometric Ratios-secant:</p> <img src='Advan=7-11.png' />  
+ <p style="color: white">Secondary Trigonometric Ratios-Cotangent:(1)</p> <img src='Advan=7-12.png' />  
   <p style="color: white">Primary Trigonometric Ratios-Tangent:</p> <img src='Advan=7-13.png' />  
-  <p style="color: white">Seconday Trigonometric Ratios-Cotangent(2):</p> <img src='Advan=7-14.png' />  
+  <p style="color: white">Secondary Trigonometric Ratios-Cotangent(2):</p> <img src='Advan=7-14.png' />  
   <p style="color: white">Pythagorean Trigonometric Identity:</p> <img src='Advan=7-15.png' /> 
 <br><img src='Advan=7-16.png' /></br> 
 <br><img src='Advan=7-17.png' /></br> 
@@ -768,11 +768,11 @@
 <h1>Chapter 8-Exponentail & Logarithmic Functions</h1>
 	</div>
 	<div  style="background-color:#333; height:410px" data-role="content" data-theme="a">
- <p style="color: white">Logarithmetic of Multiplication:</p>
+ <p style="color: white">Logarithm of Multiplication:</p>
     <img src='Advan=8-1.png' /> 
- <p style="color: white">Logarithmetic of Division:</p>
+ <p style="color: white">Logarithm of Division:</p>
     <img src='Advan=8-2.png' />  
- <p style="color: white">Logarithmetic of a Power:</p>
+ <p style="color: white">Logarithm of a Power:</p>
     <img src='Advan=8-3.png' />  
 
  </div>
@@ -1075,7 +1075,7 @@
 <p style="color: white">Limit of a root function:</p>
     <img src="1-7.png" />          
 <p style="color: white">Derivative of a function:</p>
-    <img src="1-8.png"           
+    <img src="1-8.png" />          
  </div>
 </div>
 
