--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
     <img src="2-1.png" />    
  <p style="color: white">Derivative of a constant:</p>
     <img src="2-2.png" />      
- <p style="color: white"Constant Multiple Rule for Differentiation:</p>
+ <p style="color: white">Constant Multiple Rule for Differentiation:</p>
     <img src="2-3.png" />   
  <p style="color: white">Product Rule:</p>
     <img src="2-4.png" />        
@@ -1123,7 +1123,7 @@
 
 <div id="page64" data-role="page">
 		<div data-role="header" data-theme="b">
-		<h1>CChapter 4-Curve Sketching</h1>
+		<h1>Chapter 4-Curve Sketching</h1>
 	</div>
 	<div  style="background-color:#333; height:410px" data-role="content" data-theme="a">
     <p style="color: white">Second Derivative of a Function:</p>
